Prepares for alpha release
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1810 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/fra/action.yml
+++ b/config-3/locales/fra/action.yml
@@ -15,7 +15,7 @@ fra:
       new: 'Créer un nouveau compte'
       reconciliation: 'Lettrage de comptes'
       show: 'Compte : %{number} - %{name}'
-      #>unmark: 'Unmark account'
+      unmark: 'Délettrer un compte'
     application: #!
     areas:
       edit: 'Modifier la zone postale : %{name}'
@@ -98,7 +98,7 @@ fra:
       index: 'Modèles de document'
       load: 'Charger les modèles de document par défaut'
       new: 'Création d''un modèle de document'
-      #>print: 'Print document template'
+      print: 'Imprimer un exemple'
     documents:
       print: 'Impression, exportation'
     entities:
@@ -150,7 +150,7 @@ fra:
       index: 'Aide'
       show: 'Aide: %{title}'
     incoming_deliveries:
-      #>confirm: 'Confirm incoming delivery'
+      confirm: 'Confirmer l''arrivée de la livraison'
       edit: 'Modifier l''arrivage: %{number}'
       index: 'Livraisons entrantes'
       new: 'Enregistrer un nouveau arrivage'
@@ -184,7 +184,7 @@ fra:
       new: 'Ajouter une nouvelle ligne d''écriture'
     journals:
       close: 'Clôture du %{name}'
-      #>draft: 'Draft'
+      draft: 'Brouillard'
       edit: 'Modifier le journal : %{name}'
       index: 'Journaux'
       new: 'Créer un nouveau journal'
@@ -203,11 +203,11 @@ fra:
       show: 'Îlot %{name}'
     listing_node_items: #!
     listing_nodes:
-      #>edit: 'Edit listing node'
-      #>new: 'New listing node'
+      edit: 'Modifier le nœud'
+      new: 'Nouveau nœud'
     listings:
       edit: 'Modifier l''extraction : %{name}'
-      #>extract: 'Extract listing: %{name}'
+      extract: 'Extraire les données de : %{name}'
       index: 'Exportations et mailings'
       mail: 'Envoyer un mail pour "%{listing}"'
       new: 'Création d''une nouvelle extraction'
@@ -230,13 +230,13 @@ fra:
       edit: 'Modifier une observation'
       new: 'Ajouter une observation'
     operation_lines:
-      #>new: 'New operation''s product'
+      new: 'Nouveau produit de travail'
     operation_natures:
       edit: 'Modifier le type de travail : %{name}'
       index: 'Types de travail'
       new: 'Créer un nouveau type de travail'
     operation_uses:
-      #>new: 'New tool''s use'
+      new: 'Nouveau matériel de travail'
     operations:
       edit: 'Modifier le travail %{name}'
       index: 'Travaux'
@@ -266,8 +266,8 @@ fra:
     preferences: #!
     prices:
       edit: 'Modifie le prix %{pretax_amount}/%{amount} sur %{product}'
-      #>export: 'Export prices'
-      #>find: 'Find price'
+      export: 'Exporter les prix'
+      find: 'Trouver un prix'
       import: 'Importer un fichier CSV de tarifs'
       index: 'Prix'
       new: 'Ajout d''un nouveau prix'
@@ -302,9 +302,9 @@ fra:
       new: 'Ajouter un nouveau produit'
       show: 'Produit : %{name}'
     professions:
-      #>edit: 'Edit profession'
-      #>index: 'Professions'
-      #>new: 'Add a new profession'
+      edit: 'Modifier la profession : %{name}'
+      index: 'Professions'
+      new: 'Ajouter une nouvelle profession'
     purchase_lines:
       edit: 'Modifier une ligne de la commande'
       new: 'Ajouter un produit à la commande : %{number}'
@@ -327,7 +327,7 @@ fra:
       index: 'Rôles'
       new: 'Ajouter un rôle'
     sale_lines:
-      #>detail: 'Detail sale line'
+      detail: 'Détailler une ligne de produit'
       edit: 'Modifier une ligne de produit'
       new: 'Ajout d''une ligne de produit'
     sale_natures:
@@ -338,7 +338,7 @@ fra:
       abort: 'Annuler la vente'
       cancel: 'Passage en avoir de la facture %{number}'
       confirm: 'Passer le devis en commande et aller aux livraisons'
-      #>contacts: 'Contacts of sale'
+      contacts: 'Contacts de la vente'
       correct: 'Corriger le devis'
       edit: 'Modifier la vente N°%{number}'
       index: 'Ventes'
@@ -422,7 +422,7 @@ fra:
       new: 'Ajout d''un lieu de stockage'
       show: 'Détail du lieu de stockage : %{name}'
   controllers:
-    #>account_balances: 'Account balances'
+    account_balances: 'Soldes de comptes'
     accountancy: 'Comptabilité' #!
     accounts: 'Plan de comptes'
     application: 'Application'
@@ -434,15 +434,15 @@ fra:
     companies: 'Société'
     company: 'Société' #!
     contacts: 'Contacts'
-    #>cultivations: 'Cultivations'
-    #>currencies: 'Currencies'
-    #>custom_field_choices: 'Custom field choices'
-    #>custom_field_data: 'Custom field data'
+    cultivations: 'Cultures'
+    currencies: 'Devises'
+    custom_field_choices: 'Choix de champs personnalisés'
+    custom_field_data: 'Données de champs personnalisés'
     custom_fields: 'Champs personnalisés'
     dashboards: 'Tableaux de bord'
     delays: 'Délais'
     departments: 'Services'
-    #>deposit_lines: 'Deposit lines'
+    deposit_lines: 'Lignes de remise en banque'
     deposits: 'Remises en banque'
     districts: 'Zones administratives'
     document_templates: 'Modèles de document'
@@ -459,59 +459,59 @@ fra:
     financial_years: 'Exercices comptables'
     help: 'Aide'
     incoming_deliveries: 'Livraisons entrantes'
-    #>incoming_delivery_lines: 'Incoming delivery lines'
+    incoming_delivery_lines: 'Lignes de livraison entrante'
     incoming_delivery_modes: 'Modes de réception d''arrivage'
     incoming_payment_modes: 'Modes d''encaissement'
-    #>incoming_payment_uses: 'Incoming payment uses'
+    incoming_payment_uses: 'Utilisation d''encaissement'
     incoming_payments: 'Encaissements'
-    #>interfacers: 'Interfacers'
+    interfacers: 'Interfaceurs'
     inventories: 'Inventaires'
-    #>inventory_lines: 'Inventory lines'
-    #>journal_entries: 'Journal entries'
-    #>journal_entry_lines: 'Journal entry lines'
+    inventory_lines: 'Lignes d''inventaires'
+    journal_entries: 'Écritures comptables'
+    journal_entry_lines: 'Lignes d''écritures comptables'
     journals: 'Journaux'
     land_parcel_groups: 'Groupes d''îlots'
-    #>land_parcel_kinships: 'Land parcel kinships'
+    land_parcel_kinships: 'Parenté entre îlots'
     land_parcels: 'Îlots'
-    #>listing_node_items: 'Listing node items'
-    #>listing_nodes: 'Listing nodes'
+    listing_node_items: 'Élement de nœuds d''extractions'
+    listing_nodes: 'Nœuds d''extractions'
     listings: 'Exportations et mailings'
     management: 'Commerce' #!
     mandates: 'Responsabilités'
-    #>myselves: 'Myself'
+    myselves: 'Mon compte'
     observations: 'Observations'
-    #>operation_lines: 'Operation lines'
+    operation_lines: 'Ligne de travail'
     operation_natures: 'Types de travail'
-    #>operation_uses: 'Operation uses of tools'
+    operation_uses: 'Utilisations de matériel'
     operations: 'Travaux'
     outgoing_deliveries: 'Livraisons sortantes'
-    #>outgoing_delivery_lines: 'Outgoing delivery lines'
-    outgoing_delivery_modes: 'Modes de livraison'
+    outgoing_delivery_lines: 'Lignes de livraisons sortantes'
+    outgoing_delivery_modes: 'Modes de livraisons sortantes'
     outgoing_payment_modes: 'Modes de décaissement'
-    #>outgoing_payment_uses: 'Outgoing payment uses'
+    outgoing_payment_uses: 'Utilisations des décaissements'
     outgoing_payments: 'Décaissements'
-    #>preferences: 'Preferences'
+    preferences: 'Préférences'
     prices: 'Prix'
     product_categories: 'Catégories de produits'
-    #>product_components: 'Product components'
+    product_components: 'Composants de produits'
     production: 'Production' #!
-    #>production_chain_conveyors: 'Production chain conveyors'
-    #>production_chain_work_center_uses: 'Production chain work center uses'
-    #>production_chain_work_centers: 'Production chain work centers'
+    production_chain_conveyors: 'Convoyeurs de chaînes de production'
+    production_chain_work_center_uses: 'Utilisation des ateliers de chaînes de production'
+    production_chain_work_centers: 'Atelier de chaînes de production'
     production_chains: 'Chaînes de production'
     products: 'Produits'
-    #>professions: 'Professions'
-    #>purchase_lines: 'Purchase lines'
+    professions: 'Professions'
+    purchase_lines: 'Lignes d''achat'
     purchases: 'Achats'
     relations: 'Relations' #!
     roles: 'Rôles'
-    #>sale_lines: 'Sale lines'
+    sale_lines: 'Lignes de vente'
     sale_natures: 'Types de ventes'
     sales: 'Ventes'
     sequences: 'Séquences'
-    #>sessions: 'Session'
-    #>settings: 'Settings'
-    #>stock_moves: 'Stock moves'
+    sessions: 'Session'
+    settings: 'Paramètres'
+    stock_moves: 'Mouvements de stock'
     stock_transfers: 'Transferts et pertes de stocks'
     stocks: 'État des stocks'
     store: 'Boutique' #!
@@ -520,9 +520,9 @@ fra:
     tax_declarations: 'Déclaration de TVA'
     taxes: 'Taxes'
     tools: 'Matériel'
-    #>tracking_states: 'Tracking states'
-    #>trackings: 'Trackings'
-    #>transfers: 'Transfers'
+    tracking_states: 'État des lots de traçabilité'
+    trackings: 'Lots de traçabilité'
+    transfers: 'Transferts'
     transports: 'Transports'
     units: 'Unités de mesure'
     users: 'Utilisateurs'
@@ -906,14 +906,14 @@ fra:
         events: 'Évènements'
         financial_years: 'Exercices'
         incoming_payments: 'Encaissements'
-        #>informations: 'Informations'
+        informations: 'Informations'
         journals: 'Journaux'
         land_parcels: 'Îlots et travaux'
         mandates: 'Responsabilités'
         my_account: 'Mon compte'
         outgoing_payments: 'Décaissements'
         parameters: 'Paramètres'
-        #>production_chains: 'Production chains'
+        production_chains: 'Chaînes de production'
         products: 'Produits'
         purchases: 'Achats'
         reporting: 'États'
@@ -922,7 +922,7 @@ fra:
         stocks: 'Stocks'
         subscriptions: 'Abonnements'
         tasks: 'Tâches'
-        #>tax_declarations: 'Tax declarations'
+        tax_declarations: 'Déclarations de taxes'
         tools: 'Outils'
       trade: 'Commerce'
     merge: 'Fusionner'
