Fixes a part of remaining bugs since master controllers explosion
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1816 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/fra/action.yml
+++ b/config-3/locales/fra/action.yml
@@ -183,9 +183,12 @@ fra:
     journal_entry_lines:
       new: 'Ajouter une nouvelle ligne d''écriture'
     journals:
+      balance: 'Balance'
+      bookkeep: 'Bascule comptable'
       close: 'Clôture du %{name}'
       draft: 'Brouillard'
       edit: 'Modifier le journal : %{name}'
+      general_ledger: 'Grand livre'
       index: 'Journaux'
       new: 'Créer un nouveau journal'
       reopen: 'Déclôture du %{name}'
@@ -358,7 +361,11 @@ fra:
       destroy: 'Se déconnecter'
       new: 'Connexion'
       renew: 'Renouveller la session'
-    settings: #!
+    settings:
+      about: 'À propos...'
+      backups: 'Sauvegardes'
+      edit: 'Configuration'
+      import: 'Importer des données'
     stock_moves:
       edit: 'Modifier le mouvement de stock : %{name}'
       new: 'Enregistrement d''un mouvement de stock'
