--- a/config-3/locales/arb/rights.yml
+++ b/config-3/locales/arb/rights.yml
@@ -3,7 +3,7 @@ arb:
     administrate_accountancy: 'مدخل لوحدة المحاسبة' #!
     backup_company: 'تطبيق / تحديث النسخ الاحتياطية'
     bookkeep: 'مبادلة الاجراءات التجارية للمحاسبة'
-    #>build_production_chains: 'Build production chains'
+    # build_production_chains: 'Build production chains'
     cancel_sales_invoices: 'الاحذ بالموجودات'
     change_prices_on_sales: 'تغيير اسعار البيع'
     close_journals: 'فتح واغلاق الدفاتر اليومية'
@@ -26,7 +26,7 @@ arb:
     manage_accounts: 'ادارة الحسابات'
     manage_areas: 'ادارة المناطق'
     manage_bank_statements: 'كشوفات البيانات الحسابية'
-    #>manage_cash_transfers: 'Manage cash transfers'
+    # manage_cash_transfers: 'Manage cash transfers'
     manage_cashes: 'ادارة حسابات الخزينة'
     manage_custom_fields: 'ادارة الحقول المتخصصة'
     manage_delays: 'ادارة التأخير'
@@ -40,22 +40,22 @@ arb:
     manage_estimates: 'انشاء وتعديل التقديرات'
     manage_events: 'ادارة الاحداث'
     manage_financial_years: 'ادارة وبدأ السنة المالية'
-    #>manage_incoming_delivery_modes: 'Manage incoming delivery modes'
-    #>manage_incoming_payment_modes: 'Manage incoming payment modes'
+    # manage_incoming_delivery_modes: 'Manage incoming delivery modes'
+    # manage_incoming_payment_modes: 'Manage incoming payment modes'
     manage_incoming_payments: 'ادارة قواعد البيع'
     manage_inventories: 'ادارة عمبيات الجرد'
     manage_journal_entries: 'ادارة المدخلات'
     manage_journals: 'ادارة وفتح واغلاق الدفاتر اليومية'
-    #>manage_land_parcel_groups: 'Manage groups of land parcels'
+    # manage_land_parcel_groups: 'Manage groups of land parcels'
     manage_land_parcels: 'ادارة الهيئة'
     manage_listings: 'ادارة المستخرج'
     manage_mandates: 'ادارة التفويضات'
     manage_observations: 'ادارة الملاحظات'
     manage_operations: 'ادارة الاجراءات'
     manage_outgoing_deliveries: 'ادارة انواع التسليم' #!
-    #>manage_outgoing_delivery_modes: 'Manage outgoing delivery modes'
-    #>manage_outgoing_payment_modes: 'Manage disbursement modes'
-    #>manage_outgoing_payments: 'Manage disbursements'
+    # manage_outgoing_delivery_modes: 'Manage outgoing delivery modes'
+    # manage_outgoing_payment_modes: 'Manage disbursement modes'
+    # manage_outgoing_payments: 'Manage disbursements'
     manage_payment_modes: 'ادارة طرق الدفع' #!
     manage_prices: 'ادارة الاموال'
     manage_product_categories: 'ادارة فئات المنتجات'
@@ -75,5 +75,5 @@ arb:
     __minimum__: 'بلوغ الفاعلية كحد ادنى'
     __not_used__: '(الحق الافتراضي (متعذر بلوغه' #!
     print: 'الطباعة'
-    #>__public__: 'Public access'
-    #>use_production_chains: 'Use production chains'
+    # __public__: 'Public access'
+    # use_production_chains: 'Use production chains'
