--- a/config-3/locales/jpn/languages.yml
+++ b/config-3/locales/jpn/languages.yml
@@ -7,15 +7,15 @@ jpn:
     aze: 'アゼルバイジャン語'
     bel: 'ベラルーシ語'
     ben: 'ベンガル語'
-    #>bis: 'Bislama'
+    # bis: 'Bislama'
     bul: 'ブルガリア語'
     cat: 'カタルーニャ語'
     ces: 'チェコ語'
     cmn: '北方方言'
-    #>crs: 'Seselwa Creole French'
+    # crs: 'Seselwa Creole French'
     dan: 'デンマーク語'
     deu: 'ドイツ語'
-    #>div: 'Divehi'
+    # div: 'Divehi'
     dzo: 'ゾンカ語'
     ell: 'ギリシア語'
     eng: '英語'
@@ -25,17 +25,17 @@ jpn:
     fil: 'フィリピン語'
     fin: 'フィンランド語（スオミ語）'
     fra: 'フランス語'
-    #>gil: 'Gilbertese'
+    # gil: 'Gilbertese'
     gle: 'アイルランド語（アイルランド・ゲール語）'
     grn: 'グアラニー語'
     hat: 'ハイチ・クレオール語'
     heb: 'ヘブライ語'
     hin: 'ヒンディー語'
-    #>hmo: 'Hiri Motu'
+    # hmo: 'Hiri Motu'
     hrv: 'クロアチア語'
     hun: 'ハンガリー語'
     hye: 'アルメニア語'
-    #>iba: 'Iban'
+    # iba: 'Iban'
     ind: 'インドネシア語'
     isl: 'アイスランド語'
     ita: 'イタリア語'
@@ -64,14 +64,14 @@ jpn:
     nld: 'オランダ語'
     nor: 'ノルウェー語'
     nya: 'チェワ語（チチェワ）'
-    #>nzs: 'New Zealand Sign Language'
+    # nzs: 'New Zealand Sign Language'
     pau: 'パラオ語'
     pol: 'ポーランド語'
     por: 'ポルトガル語'
-    #>pov: 'Crioulo, Upper Guinea'
+    # pov: 'Crioulo, Upper Guinea'
     pus: 'パシュトー語'
     que: 'ケチュア語'
-    #>rar: 'Rarotongan'
+    # rar: 'Rarotongan'
     ron: 'ルーマニア語'
     run: 'ルンディ語'
     rus: 'ロシア語'
@@ -87,7 +87,7 @@ jpn:
     sqi: 'アルバニア語'
     srp: 'セルビア語'
     swa: 'スワヒリ語'
-    #>swb: 'Comorian'
+    # swb: 'Comorian'
     swe: 'スウェーデン語'
     tam: 'タミル語'
     tet: 'テトゥン語'
@@ -99,7 +99,7 @@ jpn:
     tuk: 'トルクメン語（トゥルクメン語）'
     tur: 'トルコ語'
     tvl: 'ツバル語（トゥヴァル語）'
-    #>tzm: 'Tamazight, Central Atlas'
+    # tzm: 'Tamazight, Central Atlas'
     ukr: 'ウクライナ語'
     urd: 'ウルドゥー語'
     uzb: 'ウズベク語'
