Cleans and repairs broken links
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1817 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/arb/action.yml
+++ b/config-3/locales/arb/action.yml
@@ -1155,6 +1155,7 @@ arb:
     query: ': الاستعلام'
     received: 'مستلم'
     recent_events: 'الاحداث الاخيرة'
+    # recent_historic: 'Recent historic'
     record_has_been_correctly_removed: 'قد تم حذف السجلات بشكل صحيح'
     record_has_not_been_removed: 'لم يتم حذف السجلات'
     reflect: 'يعكس'
