--- a/config-3/locales/fra/action.yml
+++ b/config-3/locales/fra/action.yml
@@ -1102,6 +1102,7 @@ fra:
     query: 'Requête:'
     received: 'Reçue'
     recent_events: 'Derniers événements'
+    recent_historic: 'Historique récent'
     record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement.'
     record_has_not_been_removed: 'L''enregistrement n''a pu être supprimé.'
     reflect: 'Refléter'
