--- a/config-3/locales/jpn/action.yml
+++ b/config-3/locales/jpn/action.yml
@@ -1053,6 +1053,7 @@ jpn:
     # query: 'Query:'
     # received: 'Received'
     # recent_events: 'Recent events'
+    # recent_historic: 'Recent historic'
     # record_has_been_correctly_removed: 'The recrd has been correctly removed'
     # record_has_not_been_removed: 'The record has not been removed'
     # reflect: 'Reflect'
