--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -10,8 +10,9 @@ ekylibre (0.3.0+1.a1) unstable; urgency=low
   * Corrects debian/changelog
   * Changes version dependency in package
   * Fixes a part of remaining bugs since master controllers explosion
+  * Cleans a part of all broken links
 
- -- Brice Texier <brice@thalie.nouva.local>  Wed, 22 Jun 2011 18:43:47 +0200
+ -- Brice Texier <brice@thalie.nouva.local>  Tue, 28 Jun 2011 16:17:13 +0200
 
 ekylibre (0.3.0) unstable; urgency=low
 
