Finishes to convert kame in list and moves bottom menu in right-end corner
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1819 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/arb/support.yml
+++ b/config-3/locales/arb/support.yml
@@ -60,6 +60,7 @@ arb:
       title: 'تصدير'
       true_value: 'صحيح'
     # export_as: 'Export as %{exported}...'
+    # items_per_page: 'Items per page'
     # menu: 'Menu'
     next: 'التالي'
     no_records: 'ولا اية سجل'
