--- a/config-3/locales/fra/support.yml
+++ b/config-3/locales/fra/support.yml
@@ -60,6 +60,7 @@ fra:
       title: 'Exporter'
       true_value: 'VRAI'
     export_as: 'Exporter en %{exported}...'
+    items_per_page: 'Éléments par page'
     menu: 'Menu'
     next: 'Suivant'
     no_records: 'Aucun enregistrement'
