--- a/config-3/locales/eng/help/accountancy-bookkeep.txt
+++ b/config-3/locales/eng/help/accountancy-bookkeep.txt
@@ -1,6 +1,6 @@
 ====== Automatic accounting of business operations ======
 
-If you have not enabled the //auto accounting// in the [[>company/configure|configuration of your company]], you can make it manually to create all the records corresponding to your operations.
+If you have not enabled the //auto accounting// in the [[>settings/configure|configuration of your company]], you can make it manually to create all the records corresponding to your operations.
 
 You choose the date by which you want to record transactions and once selected you confirm if everything is correct.
 
