--- a/config-3/locales/fra/help/events-index.txt
+++ b/config-3/locales/fra/help/events-index.txt
@@ -3,12 +3,12 @@
 ===== Qu'est ce qu'un évènement ? =====
 Ils permettent de situer dans le temps et l'espace les contacts établis avec les clients/fournisseurs.
 
-Certains évènements peuvent s'enregistrer automatiquement en fonction du [[>relations/event_natures|type d'évènement]]. Cela permet de faire un suivi complet dans la liste des évènements de chaque client.
+Certains évènements peuvent s'enregistrer automatiquement en fonction du [[>event_natures/index|type d'évènement]]. Cela permet de faire un suivi complet dans la liste des évènements de chaque client.
 
 ===== Gestion des évènements =====
 Il est possible de créer {{theme:buttons/create.png|créer}}, modifier {{theme:buttons/update.png|modifier}} ou même supprimer {{theme:buttons/delete.png|supprimer}}.
 
 Les évènements ne sont jamais //verrouillés// et peuvent être modifiés et/ou supprimés à tout moment.
 
->>> Si vous enregistrez un rendez-vous à venir, il vous sera affiché sur la [[>relations/index|page d'accueil du module]].
+>>> Si vous enregistrez un rendez-vous à venir, il vous sera affiché sur la [[>dashboards/relations|page d'accueil du module]].
 
