--- a/config-3/locales/fra/help/incoming_payment_modes-index.txt
+++ b/config-3/locales/fra/help/incoming_payment_modes-index.txt
@@ -5,7 +5,7 @@ De plus, c'est ici que vous pouvez paramétrer les règlements à remettre en ba
 
 ===== Comptabilité =====
 
-!!! La [[>company/configure|comptabilisation automatique]] doit être activée pour une comptabilisation en temps réel.
+!!! La [[>settings/configure|comptabilisation automatique]] doit être activée pour une comptabilisation en temps réel.
 
 En général, les comptes associés sont différents pour chaque mode :
   * Espèces : //53. Caisse//
