--- a/config-3/locales/fra/help/sale_natures-index.txt
+++ b/config-3/locales/fra/help/sale_natures-index.txt
@@ -2,9 +2,9 @@
 
 Les types de vente permettent de **définir des caractéristiques des vente**, telles que~: le délai d'expiration, le délai de paiement, les accomptes...
 
-Vous pouvez
+Vous pouvez :
   * **créer** un type de vente
-  * le **modifier** :  [[management-sale_order_natures_update|{{theme:buttons/update.png|modifier}}]]  
+  * le **modifier** :  {{theme:buttons/update.png|modifier}}
   * le **supprimer** : {{theme:buttons/delete.png|supprimer}}
 
  
