Fixes bug on accountancy reporting. Reorganizes the menu uses and structure.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1823 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/arb/action.yml
+++ b/config-3/locales/arb/action.yml
@@ -101,8 +101,8 @@ arb:
       load: 'تحميل نموذج الوثيقة افتراضيا'
       new: 'انشاء نموذج للوثيقة'
       # print: 'Print document template'
-    documents:
-      print: 'طباعة وتصدير'
+    documents:  #!
+      print: 'طباعة وتصدير' #!
     entities:
       edit: 'تعديل الملف : %{full_name}'
       export: 'تصدير الملفات'
@@ -193,6 +193,7 @@ arb:
       index: 'الدفاتر اليومية'
       new: 'انشاء دفتر يومي جديد'
       reopen: 'فتح %{name}'
+      # reports: 'Prints, exportations'
       show: 'الدفتر اليومي : %{name} (%{code})'
     land_parcel_groups:
       # edit: 'Edit group of land parcels: %{name}'
