--- a/config-3/locales/spa/rights.yml
+++ b/config-3/locales/spa/rights.yml
@@ -42,7 +42,7 @@ spa:
     # manage_incoming_payment_modes: 'Manage incoming payment modes'
     # manage_incoming_payments: 'Manage sale payments'
     # manage_inventories: 'Manage inventories'
-    # manage_journal_entries: 'Manaeg journal entries'
+    # manage_journal_entries: 'Manage journal entries'
     # manage_journals: 'Manage, close and reopen journals'
     # manage_land_parcel_groups: 'Manage groups of land parcels'
     # manage_land_parcels: 'Manage fields'
@@ -69,6 +69,5 @@ spa:
     # manage_warehouses: 'Manage warehouses'
     # merge_entities: 'Merge people'
     # __minimum__: 'Access to the minimum'
-    # print: 'Print'
     # __public__: 'Public access'
     # use_production_chains: 'Use production chains'
