--- a/config-3/locales/eng/rights.yml
+++ b/config-3/locales/eng/rights.yml
@@ -44,7 +44,7 @@ eng:
     manage_incoming_payment_modes: 'Manage incoming payment modes'
     manage_incoming_payments: 'Manage sale payments'
     manage_inventories: 'Manage inventories'
-    manage_journal_entries: 'Manaeg journal entries'
+    manage_journal_entries: 'Manage journal entries'
     manage_journals: 'Manage, close and reopen journals'
     manage_land_parcel_groups: 'Manage groups of land parcels'
     manage_land_parcels: 'Manage fields'
@@ -70,5 +70,4 @@ eng:
     manage_users: 'Manage users'
     manage_warehouses: 'Manage warehouses'
     merge_entities: 'Merge people'
-    print: 'Print'
     use_production_chains: 'Use production chains'
