--- a/config-3/locales/fra/help/outgoing_payment_modes-index.txt
+++ b/config-3/locales/fra/help/outgoing_payment_modes-index.txt
@@ -4,7 +4,7 @@ Les moyens paiements effectués auprès des fournisseurs sont relativement simpl
 
 ===== Comptabilité =====
 
-!!! La [[>settings/configure|comptabilisation automatique]] doit être activée pour une comptabilisation en temps réel.
+!!! La [[>settings/edit|comptabilisation automatique]] doit être activée pour une comptabilisation en temps réel.
 
 En général, les comptes associés sont :
   * Espèces : //53. Caisse//
