Begins to review tests. Removes old-style and bad links.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1824 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/eng/action.yml
+++ b/config-3/locales/eng/action.yml
@@ -346,7 +346,7 @@ eng:
       # message: 'Message subscription'
       new: 'Add a new subscription'
     tax_declarations:
-      edit: 'Create a Tax Declaration'
+      edit: 'Create a Tax Declaration' #!
       index: 'VAT Declaration'
       new: 'Create a Tax report'
       # period_search: 'Period search tax declaration'
