--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -1,3 +1,15 @@
+ekylibre (0.3.0+1.a2) unstable; urgency=low
+
+  * Changes version dependency in package
+  * Fixes a part of remaining bugs since master controllers explosion
+  * Cleans a part of all broken links
+  * Fixes bug on accountancy reporting.
+  * Reorganizes the menu uses and structure.
+  * Begins to review tests.
+  * Removes old-style and bad links.
+
+ -- Brice Texier <brice@thalie.nouva.local>  Mon, 04 Jul 2011 18:35:29 +0200
+
 ekylibre (0.3.0+1.a1) unstable; urgency=low
 
   * Explodes master controllers in resources controllers.
@@ -8,13 +20,8 @@ ekylibre (0.3.0+1.a1) unstable; urgency=low
   * Changes version in alpha1 because that's the right version.
   * Fixes the bug on escape character in push script.
   * Corrects debian/changelog
-  * Changes version dependency in package
-  * Fixes a part of remaining bugs since master controllers explosion
-  * Cleans a part of all broken links
-  * Fixes bug on accountancy reporting.
-  * Reorganizes the menu uses and structure.
 
- -- Brice Texier <brice@thalie.nouva.local>  Mon, 04 Jul 2011 15:09:26 +0200
+ -- Brice Texier <brice@thalie.nouva.local>  Mon, 21 Jun 2011 11:09:26 +0200
 
 ekylibre (0.3.0) unstable; urgency=low
 
