Fixes all tests and... all tests are passed
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1826 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/eng/action.yml
+++ b/config-3/locales/eng/action.yml
@@ -273,7 +273,7 @@ eng:
       confirm: 'Confirm order and wait for deliveries'
       correct: 'Correct order'
       edit: 'Edit the purchase: %{number}'
-      finish: 'Finish order'
+      finish: 'Finish order' #!
       index: 'Purchases'
       invoice: 'Receive invoice'
       new: 'New purchase'
