--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -7,8 +7,9 @@ ekylibre (0.3.0+1.a2) unstable; urgency=low
   * Reorganizes the menu uses and structure.
   * Begins to review tests.
   * Removes old-style and bad links.
+  * Fixes all tests and... all tests are passed
 
- -- Brice Texier <brice@thalie.nouva.local>  Mon, 04 Jul 2011 18:35:29 +0200
+ -- Brice Texier <brice@thalie.nouva.local>  Tue, 05 Jul 2011 14:50:56 +0200
 
 ekylibre (0.3.0+1.a1) unstable; urgency=low
 
