--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -8,8 +8,9 @@ ekylibre (0.3.0+1.a2) unstable; urgency=low
   * Begins to review tests.
   * Removes old-style and bad links.
   * Fixes all tests and... all tests are passed
+  * Fixes dependencies in Gemfile for win32 platform
 
- -- Brice Texier <brice@thalie.nouva.local>  Tue, 05 Jul 2011 14:50:56 +0200
+ -- Brice Texier <brice@thalie.nouva.local>  Tue, 05 Jul 2011 17:43:11 +0200
 
 ekylibre (0.3.0+1.a1) unstable; urgency=low
 
