Fixes bugs on ajax call using POST method instead of GET method. Completes changelog with older versions
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1831 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/fra/action.yml
+++ b/config-3/locales/fra/action.yml
@@ -183,13 +183,13 @@ fra:
     journals:
       balance: 'Balance'
       bookkeep: 'Bascule comptable'
-      close: 'Clôture du %{name}'
+      close: 'Clôturer le journal : %{name}'
       draft: 'Brouillard'
       edit: 'Modifier le journal : %{name}'
       general_ledger: 'Grand livre'
       index: 'Journaux'
       new: 'Créer un nouveau journal'
-      reopen: 'Déclôture du %{name}'
+      reopen: 'Déclôturer le journal : %{name}'
       reports: 'Impression, exportation'
       show: 'Journal : %{name} (%{code})'
     land_parcel_groups:
