--- a/config-3/locales/eng/action.yml
+++ b/config-3/locales/eng/action.yml
@@ -156,13 +156,13 @@ eng:
     journals:
       balance: 'Balance'
       bookkeep: 'Bookkeep'
-      close: 'Closing of %{name}'
+      close: 'Close journal: %{name}'
       draft: 'Draft'
       edit: 'Edit journal: %{name}'
       general_ledger: 'General ledger'
       index: 'Journals'
       new: 'Create new journal'
-      reopen: 'Closing of %{name}'
+      reopen: 'Reopen journal : %{name}'
       reports: 'Prints, exportations'
       show: 'Journal: %{name} (%{code})'
     land_parcel_groups:
