--- a/config-3/locales/fra/help/incoming_delivery_modes-index.txt
+++ b/config-3/locales/fra/help/incoming_delivery_modes-index.txt
@@ -1,6 +1,6 @@
 ====== Types de livraison  ======
 
-Les types de livraison permettent de connaître la **nature d'une livraison**.
+Les types de livraison permettent de connaître le moyen et les conditions d'acheminement de la marchandise.
 
-Vous pouvez **ajouter** [[outgoing_delivery_modes/new|{{theme:buttons/create.png|ajouter}}]], **modifier** {{theme:buttons/update.png|modifier}} ou **supprimer** {{theme:buttons/delete.png|supprimer}} un type de livraison.
+Vous pouvez [[>incoming_delivery_modes/new|ajouter]] {{theme:buttons/new.png|ajouter}}, modifier {{theme:buttons/edit.png|modifier}} ou supprimer {{theme:buttons/destroy.png|supprimer}} un type de livraison.
 
