--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -10,13 +10,14 @@ ekylibre (0.3.0+1.a2) unstable; urgency=low
   * Fixes all tests and... all tests are passed
   * Fixes dependencies in Gemfile for win32 platform
   * Fixes bug on unit convertion
+  * Completes the debian/changelog using ekylibre.org/code/projects/ekylibre/roadmap
 
- -- Brice Texier <brice@localhost.localdomain>  Tue, 05 Jul 2011 23:06:36 +0200
+ -- Brice Texier <brice.texier@ekylibre.org>  Tue, 05 Jul 2011 23:06:36 +0200
 
 ekylibre (0.3.0+1.a1) unstable; urgency=low
 
   * Explodes master controllers in resources controllers.
-  * Adds new menu
+  * Adds new menu concept and management
   * Fixes bug on debian building due to version filter.
   * Adds push script in order to build debian/changelog with
     every commit from now.
@@ -24,10 +25,92 @@ ekylibre (0.3.0+1.a1) unstable; urgency=low
   * Fixes the bug on escape character in push script.
   * Corrects debian/changelog
 
- -- Brice Texier <brice@thalie.nouva.local>  Mon, 21 Jun 2011 11:09:26 +0200
+ -- Brice Texier <brice.texier@ekylibre.org>  Mon, 21 Jun 2011 11:09:26 +0200
 
 ekylibre (0.3.0) unstable; urgency=low
 
-  * Initial Release.
+  * Cleans rights.
+  * Cleans document templates.
 
  -- Brice Texier <brice.texier@ekylibre.org>  Mon, 11 Apr 2011 08:14:16 +0200
+
+ekylibre (0.2.999+1.a2) unstable; urgency=low
+
+  * Renames model Location in Warehouse because of name conflict
+  * Renames JournalEntry with JournalEntryLine and JournalRecord with JournalEntry
+  * Renames Enbankment with Deposit
+  * Renames delivery models
+  * Adds support for prefixes and suffixes in migrations
+  * Sets migrations compatible with SQL Server
+  * Adds CashTransfer for money transfer from cash to cash
+  * Adds automatic reconnection system on session timeout
+  * Adds reference column in Purchases and incoming deliveries
+  * Adds annotation columns for sales and purchases
+  * Adds action to reload plan of accounts
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Thu, 30 Sep 2010 08:14:16 +0200
+
+ekylibre (0.2.999+1.a1) unstable; urgency=low
+
+  * Fixes VAT computation bug.
+  * Migrates from Rails 2.3.2 to 3.0.0.beta4
+  * Reorganizes locales files (.yml, prints and help)
+  * Enhances clean rake tasks
+  * Prefixes URL by the code of the company :company/:controller/:action
+  * Sort results of listing by columns order
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Thu, 26 Aug 2010 08:14:16 +0200
+
+ekylibre (0.2.0) unstable; urgency=low
+
+  * Fixes bug on entities import
+  * Fixes bug on sequence reset
+  * Removes Language model and replaces it by the normalized list of languages
+  * Removes useless JournalPeriod model
+  * Adds general ledger and balance in accountancy
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Fri, 18 Apr 2011 08:14:16 +0200
+
+ekylibre (0.1.5) unstable; urgency=low
+
+  * Renames all migration files to have human names.
+  * Refactorizes entities import and export
+  * Adds futures events in dashboard
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Fri, 7 May 2010 08:14:16 +0200
+
+ekylibre (0.1.4) unstable; urgency=low
+
+  * Removes PostgreSQL special word to be compatible with MySQL and SQLite.
+  * Fixes bug on search on numerical values with MySQL
+  * Adds management actions for listings
+  * Adds i18n support
+  * Generalizes use of find_and_check in all controllers
+  * Adds AJAX popup in new/edit page to permit to save written data
+  * Enhances position of boutons in forms
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Fri, 23 Apr 2010 08:14:16 +0200
+
+ekylibre (0.1.3) unstable; urgency=low
+
+  * Fixes bug on listing conditions.
+  * Unifies errors and notifications presentation.
+  * Removes RedCloth from used gem by using an homemade parser
+  * Removes redhill_on_rails plugins which is obsolete
+  * Adds reduction support in sales
+  * Adds action to reopen closed journals
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Fri, 26 Feb 2010 08:14:16 +0200
+
+ekylibre (0.0.X) unstable; urgency=low
+
+  * Adds master modules: Company, Relations, Accountancy, Management and Production.
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Fri, 11 Dec 2009 08:14:16 +0200
+
+ekylibre (0.0.1) unstable; urgency=low
+
+  * Initial Release.
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Fri, 5 Sep 2008 08:14:16 +0200
+
