Fixes bug on companies#register when a user is connected. Change dependencies in debian/control due to new package for rake
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1832 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/eng/action.yml
+++ b/config-3/locales/eng/action.yml
@@ -1243,6 +1243,7 @@ eng:
       other: '%{count} deposits to validate'
       zero: 'No deposits to validate'
     x_entities:
+      one: '%{count} person'
       other: '%{count} people'
       zero: 'No people'
     x_entity_links:
