--- a/config-3/locales/jpn/action.yml
+++ b/config-3/locales/jpn/action.yml
@@ -1262,6 +1262,7 @@ jpn:
       # other: '%{count} deposits to validate'
       # zero: 'No deposits to validate'
     x_entities:
+      # one: '%{count} person'
       # other: '%{count} people'
       # zero: 'No people'
     x_entity_links:
